enable completion for fn/struct